--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="section-one">
     <div class="header">
       <div class="left-header">Header Logo</div>
       <div class="right-header">
         <ul class="links">
-          <li><a href="https://google.com">link-one</a></li>
-          <li><a href="https://google.com">link-two</a></li>
-          <li><a href="https://google.com">link-three</a></li>
+          <li><a href="https://google.com">header link one</a></li>
+          <li><a href="https://google.com">header link two</a></li>
+          <li><a href="https://google.com">header link three</a></li>
         </ul>
       </div>
     </div>
@@ -24,37 +25,40 @@
           This website has some subtext that goes here under the main title.
           It's a smaller font and the color is lower contrast
         </div>
-        <button>Sign up</button>
+        <button class="button-one">Sign up</button>
       </div>
       <div class="first-section-right">
         <div class="first-section-placeholder">
-          this is a placeholder for an image
+          <div class="placeholder-text">
+            this is a placeholder for an image
+          </div>
         </div>
       </div>
     </div>
+  </div>
     <div class="second-section">
       <div class="second-section-header">Some random information</div>
     </div>
     <div class="third-section">
-      <div class="container-one">
+      <div class="container">
         <div class="content-box"></div>
         <div class="description">
           this is some subtext under an illustration or image
         </div>
       </div>
-      <div class="container-two">
+      <div class="container">
         <div class="content-box"></div>
         <div class="description">
           this is some subtext under an illustration or image
         </div>
       </div>
-      <div class="container-three">
+      <div class="container">
         <div class="content-box"></div>
         <div class="description">
           this is some subtext under an illustration or image
         </div>
       </div>
-      <div class="container-four">
+      <div class="container">
         <div class="content-box"></div>
         <div class="description">
           this is some subtext under an illustration or image
@@ -62,11 +66,13 @@
       </div>
     </div>
     <div class="fourth-section">
+      <div class="box-container">
       <div class="quote-container">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's
         just filling up space or maybe people will actually read it.
       </div>
       <div class="quote-author">-Thor, God of Thunder</div>
+    </div>
     </div>
     <div class="fifth-section">
         <div class="fifth-section-container">
@@ -74,9 +80,11 @@
                 <div class="action">Call to action! It's time!</div>
                 <div class="sign-up">Sign up for our product by clicking that button right over there!</div>
             </div>
-            <button>Sign up</button>
+            <button class="button-two">Sign up</button>
         </div>
     </div>
-    <div class="footer">Copyright © The Odin Project 2025</div>
+    <div class="footer">
+      <div class="footer-text">Copyright © Santos Novoa 2025</div>
+    </div>
   </body>
 </html>
